spacing issue

--- a/blocks/columns/columns.css
+++ b/blocks/columns/columns.css
@@ -223,8 +223,8 @@ html[dir="rtl"] .columns.columns-transform-teaser .columns-img-col{
   text-transform: uppercase;
 }
 
-html[dir="rtl"] .columns.columns-transform-teaser>div p:nth-child(3) {
-  margin: var(--spacing-large) 0 var(--spacing-small) 30px;
+html[dir="rtl"] .columns.columns-transform-teaser>div p:nth-child(4) {
+  margin-right: 30px;
 }
 
 .columns.columns-feature-card .columns-feature-card-thumbnail {
